repoze.who changes
==================

After 1.0.1

 - Added predicate-based "restriction" middleware support
   (repoze.who.restrict), allowing configuratio-driven authorization
   as a WSGI filter.  One example predicate, 'authenticated_predicate',
   is supplied, which requires that the user be authenticated either via
   'REMOTE_USER' or via 'repoze.who.identity'.  To use the filter to
   restrict access::

     [filter:authenticated_only]
     use = egg:repoze.who#authenticated

   or::

     [filter:some_predicate]
     use = egg:repoze.who#predicate
     predicate = my.module:some_predicate
     some_option = a value

1.0.1

 - Remove dependency-link to dist.repoze.org to prevent easy_install
   from inserting that path into its search paths (the dependencies
   are available from PyPI).

1.0

 - The plugin at plugins.form.FormPlugin didn't redirect properly
   after collecting identification information.  Symptom: a downstream
   app would receive a POST request with a blank body, which would
   sometimes result in a Bad Request error.

 - Fixed interface declarations of 'classifiers.default_request_classifier'
   and 'classifiers.default_password_compare'.

 - Added actual config-driven middleware factory,
   'config.make_middleware_with_config'

 - Removed fossilized 'who_conf' argument from plugin factory functions.

 - Added ConfigParser-based WhoConfig, implementing the spec outlined at
   http://www.plope.com/static/misc/sphinxtest/intro.html#middleware-configuration-via-config-file, with the following changes:

   o "Bare" plugins (requiring no configuration options) may be specified
     as either egg entry points (e.g., 'egg:distname#entry_point_name') or
     as dotted-path-with-colon (e.g., 'dotted.name:object_id').

   o Therefore, the separator between a plugin and its classifier is
     now a semicolon, rather than a colon. E.g.:

     [plugins:id_plugin]
     use = egg:another.package#identify_with_frobnatz
     frobnatz = baz
